eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Web_Integration_Log__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>AccountId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountwithIBBId__c</fullName>
        <label>AccountwithIBBId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicantId__c</fullName>
        <label>ApplicantId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssetRelationshipId__c</fullName>
        <label>AssetRelationshipId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debug_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Debug Log</label>
        <referenceTo>Debug__c</referenceTo>
        <relationshipLabel>Web Integration Logs</relationshipLabel>
        <relationshipName>Web_Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FromTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CPDR to assist in web callout from trigger</description>
        <label>FromTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntegrationTaskPerformed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IntegrationTaskPerformed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <label>OpportunityId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Action__c</fullName>
        <label>Request Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Body__c</fullName>
        <label>Request Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Log_Date_Time__c</fullName>
        <label>Request Log Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Request_Object_Type__c</fullName>
        <label>Request Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Output__c</fullName>
        <label>Request Output</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>SUCCESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUFFERED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM FAILURE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Response_Action__c</fullName>
        <label>Response Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Body__c</fullName>
        <label>Response Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Log_Date_Time__c</fullName>
        <label>Response Log Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Response_Message_Name__c</fullName>
        <label>Response Message Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Object_Type__c</fullName>
        <label>Response Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Output__c</fullName>
        <label>Response Output</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Status__c</fullName>
        <label>Response Status</label>
        <picklist>
            <picklistValues>
                <fullName>SUCCESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUFFERED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Web Integration Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Request_Action__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Debug_Log__c</columns>
        <columns>Request_Log_Date_Time__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Response_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>WL-{DDMMYYYY}-{0000}</displayFormat>
        <label>Web Integration Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Web Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>